[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/UIField.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Tebenge.gd" type="Script" id=2]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/PlayField.tscn" type="PackedScene" id=3]

[node name="Tebenge" type="Node"]
script = ExtResource( 2 )

[node name="PlayField" parent="." instance=ExtResource( 3 )]
active = false
preActivateTest = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="UIField" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="InternalSpeaker" type="AudioStreamPlayer" parent="."]
pause_mode = 2

[connection signal="askedContinue" from="PlayField" to="." method="_on_PlayField_askedContinue"]
[connection signal="continueCountdownTicked" from="PlayField" to="." method="_on_PlayField_continueCountdownTicked"]
[connection signal="continuousArcadeTimer" from="PlayField" to="." method="_on_PlayField_continuousArcadeTimer"]
[connection signal="game_finish" from="PlayField" to="." method="_on_PlayField_game_finish"]
[connection signal="game_over" from="PlayField" to="." method="_on_PlayField_game_over"]
[connection signal="pointItIsNow" from="PlayField" to="." method="_on_PlayField_pointItIsNow"]
[connection signal="tickedArcadeTimer" from="PlayField" to="." method="_on_PlayField_tickedArcadeTimer"]
[connection signal="uiWantsTo" from="CanvasLayer/UIField" to="." method="_on_UIField_uiWantsTo"]
[connection signal="wantsToPlay" from="CanvasLayer/UIField" to="." method="_on_UIField_wantsToPlay"]
[connection signal="wantsToQuit" from="CanvasLayer/UIField" to="." method="_on_UIField_wantsToQuit"]
[connection signal="wantsToShutdown" from="CanvasLayer/UIField" to="." method="_on_UIField_wantsToShutdown"]
